--- a/blog.html
+++ b/blog.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bienes Raices</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="assets/styles/style-blog.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
 
@@ -16,11 +16,11 @@
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="/">
-                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                    <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
                 <div class="mobile-menu">
                     <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Icono Menu">
+                        <img src="assets/images/barras.svg" alt="Icono Menu">
                     </a>
                 </div>
 
@@ -42,16 +42,16 @@
 
         <div class="content-all">
             <div class="content-carrousel">
-               <figure><a href="anuncio.html"> <img src="img/anuncio1.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio2.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio3.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio4.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio5.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio6.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio7.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio8.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio9.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="img/anuncio10.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio1.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio2.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio3.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio4.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio5.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio6.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio7.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio8.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio9.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio10.jpg"></figure>
             </div>
          </div>    
     </main>
