--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bienes Raices</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
@@ -17,12 +17,12 @@
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="index.html">
-                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                    <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
                 <div class="mobile-menu">
                     <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Icono Menu">
+                        <img src="assets/images/barras.svg" alt="Icono Menu">
                     </a>
                 </div>
 
@@ -34,7 +34,7 @@
                 </nav>
             </div>
             <h1 class="animate__animated animate__rollIn"> Venta de Casas y Departamentos Exclusivos de Lujo </h1>
-        </div> <!-- contenedor -->
+        </div>
     </header>
 
     <section class="contenedor seccion">
@@ -42,7 +42,7 @@
 
         <div class="iconos-nosotros">
             <div class="icono">
-                <img src="img/icono1.svg" alt="Icono Seguridad">
+                <img src="assets/images/icono1.svg" alt="Icono Seguridad">
                 <head>
 
                 </head>
@@ -51,13 +51,13 @@
             </div>
 
             <div class="icono">
-                <img src="img/icono2.svg" alt="Icono Mejor Precio">
+                <img src="assets/images/icono2.svg" alt="Icono Mejor Precio">
                 <h3>El Mejor Precio</h3>
                 <p> El mejor precio de departamentos y casas de lujos lo encontras acá. Empeza a Planificar tu Futuro. </p>
             </div>
 
             <div class="icono">
-                <img src="img/icono3.svg" alt="Icono a Tiempo">
+                <img src="assets/images/icono3.svg" alt="Icono a Tiempo">
                 <h3>A Tiempo</h3>
                 <p>Contamos con todos los recursos para entregarte el inmueble a tiempo. </p>
             </div>
@@ -69,7 +69,7 @@
 
         <div class="contenedor-anuncios">
             <div class="anuncio">
-                <img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
+                <img src="assets/images/anuncio1.jpg" alt="Anuncio casa en el lago">
                 <div class="contenido-anuncio">
                     <h3>Casa de Lujo en el Lago</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
@@ -77,15 +77,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -96,22 +96,22 @@
             </div>
 
             <div class="anuncio">
-                <img src="img/anuncio2.jpg" alt="Anuncio casa de lujo">
+                <img src="assets/images/anuncio2.jpg" alt="Anuncio casa de lujo">
                 <div class="contenido-anuncio">
                     <h3>Casa terminados de lujo</h3>
                     <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
                     <p class="precio">$2,000,0000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -122,22 +122,22 @@
             </div>
 
             <div class="anuncio">
-                <img src="img/anuncio3.jpg" alt="Anuncio casa con alberca">
+                <img src="assets/images/anuncio3.jpg" alt="Anuncio casa con alberca">
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
                     <p class="precio">$3,000,0000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -166,7 +166,7 @@
 
             <article class="entrada-blog">
                 <div class="imagen">
-                    <img src="img/blog1.jpg" alt="Entrada de blog">
+                    <img src="assets/images/blog1.jpg" alt="Entrada de blog">
                 </div>
                 <div class="texto-entrada">
                     <a href="entrada.html">
@@ -179,7 +179,7 @@
 
             <article class="entrada-blog">
                 <div class="imagen">
-                    <img src="img/blog2.jpg" alt="Entrada de blog">
+                    <img src="assets/images/blog2.jpg" alt="Entrada de blog">
                 </div>
                 <div class="texto-entrada">
                     <a href="entrada.html">
