fix anuncios style e images

--- a/anuncio.html
+++ b/anuncio.html
@@ -7,8 +7,8 @@
     <title>Bienes Raices</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
@@ -17,11 +17,11 @@
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="/">
-                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                    <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
                 <div class="mobile-menu">
                     <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Icono Menu">
+                        <img src="assets/images/barras.svg" alt="Icono Menu">
                     </a>
                 </div>
 
@@ -36,22 +36,22 @@
     </header>
 
     <h1 class="animate__animated animate__flash"> Propiedad Genérica </h1>
-    <img src="img/destacada.jpg" alt="Imagen Anuncio">
+    <img src="assets/images/destacada.jpg" alt="Imagen Anuncio">
 
     <main class="contenedor seccion contenido-centrado">
         <div class="resumen-propiedad">
             <p class="precio">$3,000,000</p>
             <ul class="iconos-caracteristicas">
                 <li>
-                    <img src="img/icono_wc.svg" alt="icono wc">
+                    <img src="assets/images/icono_wc.svg" alt="icono wc">
                     <p>3</p>
                 </li>
                 <li>
-                    <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                    <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                     <p>3</p>
                 </li>
                 <li>
-                    <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                    <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                     <p>4</p>
                 </li>
             </ul>
