--- a/anuncios.html
+++ b/anuncios.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/normalize.css">
-    <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
 
@@ -16,11 +16,11 @@
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="index.html">
-                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                    <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
                 <div class="mobile-menu">
                     <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Icono Menu">
+                        <img src="assets/images/barras.svg" alt="Icono Menu">
                     </a>
                 </div>
 
@@ -39,7 +39,7 @@
 
         <div class="contenedor-anuncios">
             <div class="anuncio">
-                <img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
+                <img src="assets/images/anuncio1.jpg" alt="Anuncio casa en el lago">
                 <div class="contenido-anuncio">
                     <h3>Casa de Lujo en el Lago</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
@@ -47,15 +47,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -66,22 +66,22 @@
             </div>
 
             <div class="anuncio">
-                <img src="img/anuncio2.jpg" alt="Anuncio casa de lujo">
+                <img src="assets/images/anuncio2.jpg" alt="Anuncio casa de lujo">
                 <div class="contenido-anuncio">
                     <h3>Casa terminados de lujo</h3>
                     <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
                     <p class="precio">$2,000,0000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -91,22 +91,22 @@
             </div>
 
             <div class="anuncio">
-                <img src="img/anuncio3.jpg" alt="Anuncio casa con alberca">
+                <img src="assets/images/anuncio3.jpg" alt="Anuncio casa con alberca">
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
                     <p class="precio">$3,000,0000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -116,22 +116,22 @@
             </div> <!--anuncio-->
 
             <div class="anuncio">
-                <img src="img/anuncio4.jpg" alt="Anuncio casa de lujo">
+                <img src="assets/images/anuncio4.jpg" alt="Anuncio casa de lujo">
                 <div class="contenido-anuncio">
                     <h3>Casa fuera de la ciudad</h3>
                     <p>Casa con alberca y acabados de lujo fuera de la ciudad, excelente oportunidad</p>
                     <p class="precio">$2,000,0000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>2</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>2</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>5</p>
                         </li>
                     </ul>
@@ -141,22 +141,22 @@
             </div> <!--anuncio-->
         
             <div class="anuncio">
-                <img src="img/anuncio5.jpg" alt="Anuncio casa con alberca">
+                <img src="assets/images/anuncio5.jpg" alt="Anuncio casa con alberca">
                 <div class="contenido-anuncio">
                     <h3>Casa frente al bosque</h3>
                     <p>Casa con alberca frente al bosque, excelente oportunidad</p>
                     <p class="precio">$3,500,0000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>2</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -166,22 +166,22 @@
             </div> <!--anuncio-->
 
             <div class="anuncio">
-                <img src="img/anuncio6.jpg" alt="Anuncio casa con alberca">
+                <img src="assets/images/anuncio6.jpg" alt="Anuncio casa con alberca">
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
                     <p class="precio">$4,000,0000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <img src="assets/images/icono_wc.svg" alt="icono wc">
                             <p>2</p>
                         </li>
                         <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                             <p>5</p>
                         </li>
                         <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img src="assets/images/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>7</p>
                         </li>
                     </ul>
