fix nosotros style

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/normalize.css">
-    <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
 
@@ -16,11 +16,11 @@
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="index.html">
-                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                    <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
                 <div class="mobile-menu">
                     <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Icono Menu">
+                        <img src="assets/images/barras.svg" alt="Icono Menu">
                     </a>
                 </div>
 
@@ -38,7 +38,7 @@
 
         <div class="contenido-nosotros">
             <div class="imagen">
-                <img src="img/nosotros.jpg" alt="Imagen Sobre Nosotros">
+                <img src="assets/images/nosotros.jpg" alt="Imagen Sobre Nosotros">
             </div>
             <div class="texto-nosotros">
                 <blockquote>25 Años de Experiencia</blockquote>
@@ -55,19 +55,19 @@
 
         <div class="iconos-nosotros">
             <div class="icono">
-                <img src="img/icono1.svg" alt="Icono Seguridad">
+                <img src="assets/images/icono1.svg" alt="Icono Seguridad">
                 <h3>Seguridad</h3>
                 <p>El mejor sistema de detección de intrusos, que combina distintos tipos de sensores para protegerte cuando estás dentro de tu hogar y cuando no hay nadie en la propiedad.
             </div>
 
             <div class="icono">
-                <img src="img/icono2.svg" alt="Icono Mejor Precio">
+                <img src="assets/images/icono2.svg" alt="Icono Mejor Precio">
                 <h3>El Mejor Precio</h3>
                 <p>El mejor precio de departamentos y casas de lujos lo encontras acá. Empeza a Planificar tu Futuro.</p>
             </div>
 
             <div class="icono">
-                <img src="img/icono3.svg" alt="Icono a Tiempo">
+                <img src="assets/images/icono3.svg" alt="Icono a Tiempo">
                 <h3>A Tiempo</h3>
                 <p>Contamos con todos los recursos para entregarte el inmueble a tiempo. </p>
             </div>
