intento poner texto en blanco en footer

--- a/anuncios.html
+++ b/anuncios.html
@@ -31,7 +31,7 @@
                     <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
-        </div> <!-- contenedor -->
+        </div>
     </header>
 
     <main class="seccion contenedor">
