--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
                     <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
-        </div> <!-- contenedor -->
+        </div>
     </header>
 
     
