--- a/anuncio.html
+++ b/anuncio.html
@@ -32,7 +32,7 @@
                     <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
-        </div> <!-- contenedor -->
+        </div> 
     </header>
 
     <h1 class="animate__animated animate__flash"> Propiedad Genérica </h1>
