--- a/contacto.html
+++ b/contacto.html
@@ -12,22 +12,32 @@
     <title>Contacto</title>
   </head>
   <body>
-    <header class="site-header inicio"> 
-      <div class="contenedor contenido-header"> 
-        <div class="barra">
-          <h1>Contáctenos!</h1>
-          <nav class="navegacion">
-            <a href="index.html">Home</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-          </nav>
-        </div>
+
+    <header class="site-header">
+      <div class="contenedor contenido-header">
+          <div class="barra">
+              <a href="index.html">
+                  <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
+              </a>
+              <div class="mobile-menu">
+                  <a href="#navegacion">
+                      <img src="assets/images/barras.svg" alt="Icono Menu">
+                  </a>
+              </div>
+
+              <nav id="navegacion" class="navegacion">
+                  <a href="nosotros.html">Nosotros</a>
+                  <a href="anuncios.html">Anuncios</a>
+                  <a href="blog.html">Blog</a>
+                  <a href="contacto.html">Contacto</a>
+              </nav>
+          </div>
       </div>
-    </header>
+  </header>
 
     <div class="container">
-      <br />
+
+     <h1>Contáctenos!</h1>
       <div class="row">
           <div class="col-md-6">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13138.472511985594!2d-58.4200673302246!3d-34.58852789999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca83d490b497%3A0xf49058477ec5e997!2sImar%20%26%20Asociados%20Negocios%20Inmobiliarios!5e0!3m2!1ses-419!2sar!4v1622068898062!5m2!1ses-419!2sar" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
