--- a/Nosotros.html
+++ b/Nosotros.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <nav id="navegacion" class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
+                    <a href="index.html">Home</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
                     <a href="contacto.html">Contacto</a>
@@ -77,7 +77,7 @@
     <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
-                <a href="nosotros.html">Nosotros</a>
+                <a href="index.html">Home</a>
                 <a href="anuncios.html">Anuncios</a>
                 <a href="blog.html">Blog</a>
                 <a href="contacto.html">Contacto</a>
