--- a/anuncio.html
+++ b/anuncio.html
@@ -26,6 +26,7 @@
                 </div>
 
                 <nav id="navegacion" class="navegacion">
+                    <a href="index.html">Home</a>
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
@@ -65,6 +66,7 @@
     <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
+                <a href="index.html">Home</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="anuncios.html">Anuncios</a>
                 <a href="blog.html">Blog</a>
