--- a/anuncios.html
+++ b/anuncios.html
@@ -25,6 +25,7 @@
                 </div>
 
                 <nav id="navegacion" class="navegacion">
+                    <a href="index.html">Home</a>
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
@@ -195,8 +196,8 @@
     <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
+                <a href="index.html">Home</a>
                 <a href="nosotros.html">Nosotros</a>
-                <a href="anuncios.html">Anuncios</a>
                 <a href="blog.html">Blog</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
