--- a/contacto.html
+++ b/contacto.html
@@ -26,10 +26,10 @@
               </div>
 
               <nav id="navegacion" class="navegacion">
+                <a href="index.html">Home</a>
                   <a href="nosotros.html">Nosotros</a>
                   <a href="anuncios.html">Anuncios</a>
                   <a href="blog.html">Blog</a>
-                  <a href="contacto.html">Contacto</a>
               </nav>
           </div>
       </div>
