--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <nav id="navegacion" class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
+                    <a href="index.html">Home</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
                     <a href="contacto.html">Contacto</a>
