fix footer blog

--- a/blog.html
+++ b/blog.html
@@ -35,28 +35,23 @@
         </div>
     </header>
 
-    
-
     <main class="contenedor seccion contenido-centrado">
         <h1 class="fw-300 centrar-texto">Nuestro Blog</h1>
-
-
         <div class="content-all">
             <div class="content-carrousel">
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio1.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio2.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio3.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio4.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio5.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio6.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio7.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio8.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio9.jpg"></figure>
-               <figure><a href="anuncio.html"> <img src="assets/images/anuncio10.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio1.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio2.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio3.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio4.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio5.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio6.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio7.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio8.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio9.jpg"></a></figure>
+               <figure><a href="anuncio.html"> <img src="assets/images/anuncio10.jpg"></a></figure>
             </div>
-         </div>    
+        </div>    
     </main>
-
     <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
