--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,6 @@
                 <nav id="navegacion" class="navegacion">
                     <a href="index.html">Home</a>
                     <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
                     <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
@@ -55,9 +54,8 @@
     <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
-                <a href="nosotros.html">Nosotros</a>
+                <a href="index.html">Home</a>
                 <a href="anuncios.html">Anuncios</a>
-                <a href="blog.html">Blog</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
             <p class="copyright">Todos los Derechos Reservados 2021 &copy; </p>
