--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,7 @@
 
                 <nav id="navegacion" class="navegacion">
                     <a href="index.html">Home</a>
+                    <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="contacto.html">Contacto</a>
                 </nav>
@@ -55,6 +56,7 @@
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
                 <a href="index.html">Home</a>
+                <a href="nosotros.html">Nosotros</a>
                 <a href="anuncios.html">Anuncios</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
